<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.castelcode.cruisecompanion.tile_activities.TripAgenda"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:id="@+id/trip_agenda">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:id="@+id/start_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_date_label"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/textColor"/>
        <TextView
            android:id="@+id/end_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_date_label"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/textColor"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/start_date_picker_launcher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:text="@string/select_start_date"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/end_date_picker_launhcer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:text="@string/select_end_date"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical">
        <ExpandableListView
            android:id="@+id/list_of_dates"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.75"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/share_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="end"
                android:text="@string/share_all"
                android:textColor="@android:color/black"
                android:layout_toLeftOf="@+id/expand_all_button"
                android:layout_toStartOf="@+id/expand_all_button"/>

            <Button
                android:id="@+id/expand_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="end"
                android:text="@string/expand_all_label"
                android:textColor="@android:color/black" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>

