<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:ignore="MissingPrefix">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.75"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingStart="10dip"
            android:paddingEnd="10dip"
            android:orientation="vertical"
            xmlns:app="http://schemas.android.com/apk/res-auto">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/cruise_notifications_label"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/cruise_notifications_description"
                android:textSize="14sp"/>
        </LinearLayout>
        <CheckBox
            android:id="@+id/cruise_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:buttonTint="@color/textColor"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.75"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingStart="10dip"
            android:paddingEnd="10dip"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/flight_notifications_label"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/flight_notifications_description"
                android:textSize="14sp"/>
        </LinearLayout>
        <CheckBox
            android:id="@+id/flight_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:buttonTint="@color/textColor"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.75"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingStart="10dip"
            android:paddingEnd="10dip"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/hotel_notifications_label"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/hotel_notifications_description"
                android:textSize="14sp"/>
        </LinearLayout>
        <CheckBox
            android:id="@+id/hotel_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:buttonTint="@color/textColor"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.75"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingStart="10dip"
            android:paddingEnd="10dip"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/bus_notifications_label"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/bus_notifications_description"
                android:textSize="14sp"/>
        </LinearLayout>
        <CheckBox
            android:id="@+id/bus_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:buttonTint="@color/textColor"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>